--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,11 @@
 {
   "manifest_version": 3,
   "name": "Obsidian Smart History",
-  "version": "2.4.0",
+  "version": "2.4.1",
   "description": "__MSG_extensionDescription__",
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'none'; connect-src https://127.0.0.1:* http://127.0.0.1:* https://generativelanguage.googleapis.com https://*:* http://*:*; style-src 'self'; default-src 'none';"
+  },
   "default_locale": "en",
   "icons": {
     "16": "icons/icon16.png",
